littlelink/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: littlelink
  annotations:
    linkerd.io/inject: enabled
