littlelink/littlelink-service.yml
apiVersion: v1
kind: Service
metadata:
  name: littlelink
spec:
  selector:
    app: littlelink
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
