littlelink/ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: littlelink
  annotations:
    linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: littlelink
  namespace: littlelink
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`claytonc.dev`)
      kind: Rule
      services:
      - name: littlelink-littlelink-server
        port: 3000
  tls:
    secretName: littlelink-tls
