littlelink/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: littlelink
  namespace: littlelink
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`claytonc.dev`)
      kind: Rule
#      middlewares: 
#        - name: auth
      services:
      - name: littlelink-littlelink-server
        port: 3000
  #    middlewares:
  #      - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: littlelink-tls
